# Rust-Web-API

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2022-01-19-141534_tasks/: up.sql
migrations/2022-01-19-173537_UsersTasks/: down.sql  up.sql
src/: auth.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs  tests.rs
