[package]
name = "rust-web-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
diesel = { version = "1.4.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
r2d2-diesel = "1.0"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
custom_derive ="0.1.7"
chrono = { version = "0.4", features = ["serde"] }
okapi = "0.4"
rocket_okapi = "0.5"
schemars = "0.7"
jwt = "0.4.0"
rust-crypto = "0.2"
rustc-serialize = "0.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]